# open-hack

./: .env  .gitignore  Cargo.toml  Justfile  LICENSE.md  README.md
crates/openhack/: Cargo.toml
crates/openhack/migrations/: 20250317234454_create_users_table.sql  20250606190409_create_events_table.sql
crates/openhack/src/: command.rs  common.rs  config.rs  context.rs  entity.rs  env.rs  lib.rs  openhack.rs  report.rs  support.rs
crates/openhack/src/command/: core.rs  create_event.rs  create_user.rs  login_user.rs  update_event.rs  upsert_rsvp.rs
crates/openhack/src/entity/: date_selection.rs  email.rs  email_address.rs  event.rs  event_id.rs  event_rsvp.rs  next_page_results.rs  password.rs  password_hash.rs  rsvp_status.rs  user.rs  user_hash.rs  user_id.rs
crates/openhack/src/env/: query.rs  resource.rs
crates/openhack/src/env/query/: fetch_event_by_id.rs  fetch_password_hash.rs  fetch_user_by_id.rs  fetch_user_for_login.rs  find_events.rs  insert_event.rs  insert_user.rs  update_event.rs  update_event_for_owner.rs  upsert_event_rsvp.rs  user.rs
crates/openhack/src/env/query/fixtures/: jdongs-event.sql  john-smith.sql
crates/openhack/src/env/resource/: database.rs  password_manager.rs
crates/openhack/src/report/: core.rs  search_events.rs
crates/openhack/src/support/: date.rs  env.rs
crates/openhack_api/: Cargo.toml
crates/openhack_api/src/: main.rs
crates/openhack_auth/: Cargo.toml
crates/openhack_auth/src/: lib.rs
crates/openhack_server/: Cargo.toml
crates/openhack_server/src/: api.rs  main.rs
crates/openhack_server/src/api/: context.rs  handler.rs  jwt.rs  response.rs
crates/openhack_ui/: Cargo.toml  Dioxus.toml
crates/openhack_ui/src/: backend.rs  gui.rs  main.rs  server.rs  structs.rs
crates/openhack_ui/src/gui/: forms.rs  pages.rs  sections.rs
crates/openhack_ui/src/gui/forms/: create_event.rs  signin.rs  signup.rs
crates/openhack_ui/src/gui/pages/: create_event.rs  home.rs  user_sign_in.rs  user_sign_out.rs  user_sign_up.rs
crates/openhack_ui/src/gui/sections/: upcoming_events.rs
crates/openhack_ui/src/server/authorization/: claims.rs  jwt_middleware.rs  keys.rs  mod.rs
front-end/: README.md  dockerfile  nginx.conf  package-lock.json  package.json
front-end/src/: App.tsx
front-end/src/components/: AppShell.tsx  Events.tsx  Navigation.tsx
front-end/src/pages/: About.tsx  Contact.tsx  Home.tsx  Login.tsx  SignUp.tsx
front-end/src/pages/events/: Index.tsx
