# https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
resolver = "3"
members = ["crates/openhack", "crates/openhack_auth"]

[workspace.dependencies]
argon2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }
tracing = { version = "0.1" }
chrono = { version = "0.4" }
derive_more = { version = "2.0" }

# normally dev dependencies
mockall = "0.13"
rstest = "0.25"
serde_json = "1.0"
