[package]
name = "openhack"
version = "0.1.0"
edition = "2024"

[features]
default = ["runtime", "serde"]
runtime = ["dep:sqlx", "dep:tokio", "dep:tracing"]
serde = ["dep:serde"]

[dependencies]
openhack_auth = { path = "../openhack_auth" }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["full"] }
bon = { workspace = true }
validator = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

# Runtime Features
sqlx = { workspace = true, optional = true, features = [
  "postgres",
  "runtime-tokio",
] }
tokio = { workspace = true, optional = true, features = ["full"] }
tracing = { workspace = true, optional = true }

# Serde Feature
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true
