[package]
name = "openhack_ui"
version = "0.1.0"
authors = ["Ben Falk <benjamin.falk@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at:
#   https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }

# server dependencies
openhack = { path = "../openhack", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1.45", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
  "dioxus/server",
  "dep:axum",
  "dep:tokio",
  "dep:openhack",
  "dep:tracing",
]
