[package]
name = "openhack_ui"
version = "0.1.0"
authors = ["Ben Falk <benjamin.falk@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at:
#   https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0" }

# SERVER DEPENDENCIES
openhack = { path = "../openhack", optional = true }
# Dioxus only works 0.7 so we cannot update to 0.8.x :(
axum = { version = "0.7", optional = true }
axum-extra = { version = "0.10", features = ["cookie"], optional = true }
tokio = { version = "1.45", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }
jsonwebtoken = { version = "9.3", optional = true }
chrono = { version = "0.4", optional = true }


# CLIENT-SIDE DEPENDENCIES
web-sys = { version = "0.3", optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "dep:web-sys"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
  "dioxus/server",
  "dep:axum",
  "dep:axum-extra",
  "dep:tokio",
  "dep:openhack",
  "dep:tracing",
  "dep:jsonwebtoken",
  "dep:chrono",
]
